Fix price update of WarsawGpw